2000-10-17  Graham Stott  <grahams@redhat.com>
 
	* config/i386/i386.md (testqi_1): Add missing operand prefix
	for operand 0.
	* config/i386/i386-protos.h: Add missing prototype.
 
2000-10-17  Diego Novillo  <dnovillo@cygnus.com>

	* config/i386/unix.h (ASM_OUTPUT_MI_THUNK): Symbol
	_GLOBAL_OFFSET_TABLE should not have a $ prefix when
	using -mintel-syntax.

2000-10-17  Joseph S. Myers  <jsm28@cam.ac.uk>

	* c-common.c (FMT_FLAG_DOLLAR_MULTIPLE): Define.
	(format_types): Use it for printf.
	(maybe_read_dollar_number): Add parameter for the kind of format
	involved.  Warn for multiple use for arguments if this is
	inappropriate for the kind of format involved.
	(check_format_info_main): Update calls to maybe_read_dollar_number.

2000-10-17  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	* inclhack.def (hpux_maxint): Also apply fix to values.h.
	* fixincl.x: Rebuilt.

2000-10-17  Alexandre Oliva  <aoliva@redhat.com>

	* genrecog.c (write_switch): Return the first condition that needs a
	label.

2000-10-17  Bernd Schmidt  <bernds@redhat.co.uk>

	* c-tree.h (warn_sequence_point): Move declaration to...
	* c-common.h (warn_sequence_point): ... here.
	* c-decl.c (warn_sequence_point): Move definition to...
	* c-common.c (warn_sequence_point): ... here.
	(struct reverse_tree): New.
	(reverse_list, reverse_max_depth): New static variables.
	(build_reverse_tree, common_ancestor, modify_ok
	verify_sequence_points): New functions.
	(c_expand_expr_stmt): Call verify_sequence_points if -Wsequence-point.
	* c-typeck.c (check_modify_expr): Delete.
	(build_modify_expr): Don't call it.

2000-10-17  Joseph S. Myers  <jsm28@cam.ac.uk>

	* c-common.h (warn_missing_format_attribute): New variable.
	* c-decl.c (warn_missing_format_attribute): New variable.
	(c_decode_option): Decode -Wmissing-format-attribute and
	-Wno-missing-format-attribute.
	* c-common.c (check_function_format): If
	-Wmissing-format-attribute, give a warning where a vprintf or